# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AuthController;
+use App\Http\Controllers\CartController;
 use App\Http\Controllers\ProductController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -29,4 +30,9 @@ Route::get('products/{id}', [ProductController::class, 'show']);
 Route::post('products', [ProductController::class, 'store'])->middleware(['auth:api', 'role:adm']);
 Route::put('products/{id}', [ProductController::class, 'update'])->middleware(['auth:api', 'role:adm']);
 Route::delete('products/{id}', [ProductController::class, 'destroy'])->middleware(['auth:api', 'role:adm']);
+
+Route::get('cart', [CartController::class, 'index'])->middleware(['auth:api', 'role:usr']);
+Route::post('cart/items', [CartController::class, 'store'])->middleware(['auth:api', 'role:usr']);
+Route::put('cart/items/{id}', [CartController::class, 'update'])->middleware(['auth:api', 'role:usr']);
+Route::delete('cart/items/{id}', [CartController::class, 'destroy'])->middleware(['auth:api', 'role:usr']);
 
